src/styles/blocks/_describe-package-section.scss
/*-------------------------Describe package section---------------------------------*/

.describe-package-section {
  padding: 50px 0;
  .icons-list-main-container{
    margin-top: 40px;
    padding: 30px 15px;
    border: 1px solid $blue;
    @media screen and (max-width: 992px){
      padding: 25px;
      margin-bottom: 25px;
    }
  }
  .package-title {
    font-size: 60px;
    font-weight: 700;
    @media screen and (max-width: 992px){
      text-align: center;
    }
  }
  .package-price {
    font-size: 40px;
    text-transform: uppercase;
    font-weight: 700;
    letter-spacing: 4px;
    @media screen and (max-width: 992px){
      text-align: center;
    }
  }
  .package-price-description{
    margin-top: 20px;
    @media screen and (max-width: 992px){
      text-align: center;
    }
    p{
      margin-bottom: 0;
      font-size: 20px;
      font-family: 'Roboto', sans-serif;
    }
  }
}

.package-button-wrapper{
  text-align: right;
  @media screen and (max-width: 992px){
    text-align: center;
  }
  a{
    color:#fff;
    font-size: 20px;
    font-weight: 600;
    &:hover{
      color:#fff;
    }
    &:first-child{
      margin-right: 15px;
    }
  }
}

@media screen and (max-width: 400px) {
  .package-button-wrapper,
  .buttons-wrapper {
    flex-wrap: wrap;
    .btn {
      width: 100%!important;
      max-width: 320px;
      margin: 0 0 15px 0!important;
    }
  }
}

